crates/fleet-server/src/monitor/snapshots/fleet_server__monitor__ui__tests__render_dashboard_empty.snap
---
source: crates/fleet-server/src/monitor/ui.rs
expression: terminal.backend().to_string()
---
" fleetd v0.1.0                                                                  "
" host: test-host  addr: 127.0.0.1:5514  uptime: 2h 34m  health: OK              "
"┌ EXECUTOR POOL ───────────────┐┌ HOT BUFFER ──────────────────────────────────┐"
"│ active: 1/4 queued: 0        ││ events: 0 / 100,000 (0.0%)                   │"
"│████████     25%              ││ bytes:  0 B / 100.0 MB (0.0%)                │"
"│                              ││ batches: 0                                   │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ QUERY THROUGHPUT ────────────┐┌ INGEST ──────────────────────────────────────┐"
"│ total: 0  0.0 q/s            ││ events: 0  ~0 ev/s                           │"
"│ errors: 0  timeouts: 0       ││ rejected: 0                                  │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ SSE STREAMS ─────────────────┐┌ SCHEDULER ───────────────────────────────────┐"
"│ active: 2/32                 ││ enabled: 3 schedules                         │"
"└──────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ RECENT QUERIES ──────────────────────────────────────────────────────────────┐"
"│ no queries yet                                                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ctrl-c to quit                                                                 "
