crates/fleet-server/src/monitor/snapshots/fleet_server__monitor__ui__tests__render_dashboard_narrow.snap
---
source: crates/fleet-server/src/monitor/ui.rs
expression: terminal.backend().to_string()
---
" fleetd v0.1.0                                              "
" host: test-host  addr: 127.0.0.1:5514  uptime: 2h 34m  heal"
"┌ EXECUTOR POOL ───────┐┌ HOT BUFFER ──────────────────────┐"
"│ active: 1/4 queued: 0││ events: 12,847 / 100,000 (12.8%) │"
"│██████   25%          ││ bytes:  4.2 MB / 100.0 MB (4.2%) │"
"│                      ││ batches: 23                      │"
"└──────────────────────┘└──────────────────────────────────┘"
"┌ QUERY THROUGHPUT ────┐┌ INGEST ──────────────────────────┐"
"│ total: 1,247  2.1 q/s││ events: 847,293  ~340 ev/s       │"
"│ errors: 12  timeouts:││ rejected: 47                     │"
"└──────────────────────┘└──────────────────────────────────┘"
"┌ SSE STREAMS ─────────┐┌ SCHEDULER ───────────────────────┐"
"│ active: 2/32         ││ enabled: 3 schedules             │"
"└──────────────────────┘└──────────────────────────────────┘"
"┌ RECENT QUERIES ──────────────────────────────────────────┐"
"│#1247   23ms     142 rows   OK   level:error last:1h | sta│"
"│#1246   87ms     1 rows     OK   * | stats count()        │"
"│#1245   12ms     - rows     ERR  invalid query syntax     │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌ ACTIVE QUERIES ──────────────────────────────────────────┐"
"│#1248   admin      running 1.2s   service:nginx | timechar│"
"└──────────────────────────────────────────────────────────┘"
" ctrl-c to quit                                             "
